[gd_scene load_steps=2 format=3 uid="uid://bqxvhxqxqxqxq"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0xqxq"]

[node name="Main" type="Node3D"]
script = ExtResource("1_0xqxq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.0
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 10)

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(100, 1, 100)

[node name="Car" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CarBody" type="CSGBox3D" parent="Car"]
size = Vector3(2, 0.5, 4)

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 2)
wheel_radius = 0.3
wheel_rest_length = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.2
suspension_stiffness = 50.0
damping_compression = 0.88
damping_relaxation = 0.88

[node name="FrontRightWheel" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 2)
wheel_radius = 0.3
wheel_rest_length = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.2
suspension_stiffness = 50.0
damping_compression = 0.88
damping_relaxation = 0.88

[node name="RearLeftWheel" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -2)
wheel_radius = 0.3
wheel_rest_length = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.2
suspension_stiffness = 50.0
damping_compression = 0.88
damping_relaxation = 0.88

[node name="RearRightWheel" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2)
wheel_radius = 0.3
wheel_rest_length = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.2
suspension_stiffness = 50.0
damping_compression = 0.88
damping_relaxation = 0.88 